Project

General

Profile

Actions

Bug #38007

closed

multisite: bucket full sync does not handle delete markers

Added by Casey Bodley about 5 years ago. Updated almost 5 years ago.

Status:
Resolved
Priority:
High
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
multisite versioning
Backport:
luminous mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

full sync attempts to fetch/create objects associated with delete markers, and either fails with ENOENT in the case of versioned buckets or does the wrong thing (create + link_olh) in the case of versioning-suspended buckets

these failures are exercised by two test cases in https://github.com/ceph/ceph/pull/26080


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #38078: mimic: multisite: bucket full sync does not handle delete markersResolvedPrashant DActions
Copied to rgw - Backport #38079: luminous: multisite: bucket full sync does not handle delete markersResolvedCasey BodleyActions
Actions #1

Updated by Casey Bodley about 5 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Casey Bodley about 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Casey Bodley about 5 years ago

  • Copied to Backport #38078: mimic: multisite: bucket full sync does not handle delete markers added
Actions #4

Updated by Casey Bodley about 5 years ago

  • Copied to Backport #38079: luminous: multisite: bucket full sync does not handle delete markers added
Actions #5

Updated by Nathan Cutler almost 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF