rgw: bucket full sync handles delete markers

full sync uses CLS_RGW_OP_LINK_OLH_DM for delete markers instead of
trying to fetch them from the source zone

Fixes: http://tracker.ceph.com/issues/38007

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit 5ffd34c5a6a9bbdba086eb57cded915b879513d4)